--- a/teacher_html/teacher_statistics.html
+++ b/teacher_html/teacher_statistics.html
@@ -46,7 +46,7 @@ $(function(){
 
       <div class="weui_btn_primary weui-header z-ind1000"> 
           <div class="weui-header-left"> <a href="teacher_evaluate.html" class="icon icon-icon1 f20 btn-slide-bar"></a>  </div>
-          <h1 class="weui-header-title"  onclick="selectmenu('1');">2017-03<i id="cell_1" class="icon icon-zhankaijiantou f14 mar_l5 f-green"></i></h1>
+          <h1 class="weui-header-title"><a href="teacher_st-dlist.html" class="block">2017-03<i id="cell_1" class="icon icon-zhankaijiantou f14 mar_l5 f-green"></i></a></h1>
       </div>
       
     <div class="weui_cells">
@@ -182,133 +182,6 @@ $(function(){
      </ul> 
 
     </div>
-
-<!--弹出日期--> 
-<div class="weui_msg_img hide abs" id="menu_1" style="display:none;">
-<div class="class_checks weui-border-tb tleft">
-    <div class="page-bd">  
-      <div class="weui_cells weui_cells_radio" >
-        <label class="weui_cell weui_check_label" for="x11">
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-01</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" class="weui_check" name="radio1" id="x11">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-        <label class="weui_cell weui_check_label" for="x12">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-02</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x12">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-             <label class="weui_cell weui_check_label" for="x13">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-03</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x13" checked="checked">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-        <label class="weui_cell weui_check_label" for="x14">
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-04</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" class="weui_check" name="radio1" id="x14">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-        <label class="weui_cell weui_check_label" for="x15">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-05</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x15">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-             <label class="weui_cell weui_check_label" for="x16">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-06</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x16">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-        <label class="weui_cell weui_check_label" for="x17">
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-07</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" class="weui_check" name="radio1" id="x17">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-        <label class="weui_cell weui_check_label" for="x18">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-08</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x18" >
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-             <label class="weui_cell weui_check_label" for="x19">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-09</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x19">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-        <label class="weui_cell weui_check_label" for="x20">
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-10</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" class="weui_check" name="radio1" id="x20">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-        <label class="weui_cell weui_check_label" for="x21">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-11</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x21">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-             <label class="weui_cell weui_check_label" for="x22">
-
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>2017-12</p>
-            </div>
-            <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x22">
-                <span class="weui_icon_checked"></span>
-            </div>
-        </label>
-     </div>
-         
-    </div>
-</div>
-</div>
 
 </body>
 </html>
