--- a/student_html/stu_honor-list.html
+++ b/student_html/stu_honor-list.html
@@ -53,7 +53,7 @@ $(function(){
 
 <div class="weui_btn_primary weui-header z-ind1000"> 
     <div class="weui-header-left"> <a href="stu_function.html" class="icon icon-shouye f20"><span class=" f15">首页</span></a>  </div>
-    <h1 class="weui-header-title"  onclick="selectmenu('1');">16-17学年度（1）<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14 f-green"></i></h1>
+    <h1 class="weui-header-title"><a href="term_list.html" class="block">16-17学年度（1）<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14 f-green"></i></a></h1>
     <div class="weui-header-right"><a href="stu_honor-mine.html" class="picker-button close-picker weui_btn weui_btn_mini bg-green-b">我的</a></div> 
 </div>
 <div class="weui_tab " style="height:44px;" id="tab1"><!--tab-fixed添加顶部-->
