首页新增区域版入口

--- a/student_html/stu_function.html
+++ b/student_html/stu_function.html
@@ -82,7 +82,16 @@ document.addEventListener("DOMContentLoaded", function(){
                         <p class="weui_media_desc"><span>综合报告</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>历史报告</span></p>
                     </div>
                 </a>
-                
+                <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                    <div class="weui_media_hd">
+                        <span class="icon icon-zonghepingjia f45 middle f-blue_b"></span>
+                    </div>
+                    <div class="weui_media_bd">
+                        <h4 class="weui_media_title">综合评价<span class="weui-badge bg-blue mar_l5">区域版</span></h4>
+                        <p class="weui_media_desc"><span>区域发布</span></p>
+                    </div>
+                </a>
+
             </div>
         </div>    
            
