--- a/student_html/stu_function.html
+++ b/student_html/stu_function.html
@@ -84,10 +84,10 @@ document.addEventListener("DOMContentLoaded", function(){
                 </a>
                 <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd">
-                        <span class="icon icon-zonghepingjia f45 middle f-blue_b"></span>
+                        <span class="icon icon-27 f45 middle f-blue_b"></span>
                     </div>
                     <div class="weui_media_bd">
-                        <h4 class="weui_media_title">综合评价<span class="weui-badge bg-blue mar_l5">区域版</span></h4>
+                        <h4 class="weui_media_title">学生评价<span class="weui-badge bg-blue mar_l5">区域版</span></h4>
                         <p class="weui_media_desc"><span>区域发布</span></p>
                     </div>
                 </a>
