功能首页说明文字更改

--- a/student_html/stu_function.html
+++ b/student_html/stu_function.html
@@ -52,7 +52,7 @@ document.addEventListener("DOMContentLoaded", function(){
                     </div>
                     <div class="weui_media_bd">
                         <h4 class="weui_media_title">学生评价</h4>
-                        <p class="weui_media_desc"><span>日常评价</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>评价统计</span></p>
+                        <p class="weui_media_desc"><span>由学校发布的日常评价</span></p>
                     </div>
                 </a>
                 <a href="stu_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
@@ -61,7 +61,7 @@ document.addEventListener("DOMContentLoaded", function(){
                     </div>
                     <div class="weui_media_bd">
                         <h4 class="weui_media_title">体质健康</h4>
-                        <p class="weui_media_desc"><span>体育测试</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>体检报告</span></p>
+                        <p class="weui_media_desc"><span>学生在校体育测试情况</span></p>
                     </div>
                 </a>
                 <a href="stu_honor-list.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
@@ -70,7 +70,7 @@ document.addEventListener("DOMContentLoaded", function(){
                     </div>
                     <div class="weui_media_bd">
                         <h4 class="weui_media_title">个人荣誉</h4>
-                        <p class="weui_media_desc"><span>荣誉申报</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>荣誉信息</span></p>
+                        <p class="weui_media_desc"><span>学生在校个人荣誉情况</span></p>
                     </div>
                 </a>
                 <a href="stu_reports-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
@@ -79,7 +79,7 @@ document.addEventListener("DOMContentLoaded", function(){
                     </div>
                     <div class="weui_media_bd">
                         <h4 class="weui_media_title">学期报告书</h4>
-                        <p class="weui_media_desc"><span>综合报告</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>历史报告</span></p>
+                        <p class="weui_media_desc"><span>学生在校综合性报告书</span></p>
                     </div>
                 </a>
                 <a href="" class="weui_panel_ft weui_media_box weui_media_appmsg">
@@ -88,7 +88,7 @@ document.addEventListener("DOMContentLoaded", function(){
                     </div>
                     <div class="weui_media_bd">
                         <h4 class="weui_media_title">学生评价<span class="weui-badge bg-blue mar_l5">区域版</span></h4>
-                        <p class="weui_media_desc"><span>区域发布</span></p>
+                        <p class="weui_media_desc"><span>由区域机构下发的日常评价</span></p>
                     </div>
                 </a>
 
