--- a/qky-stus_roles.html
+++ b/qky-stus_roles.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>学生综合素质评价</title>
- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-  <link rel="stylesheet" href="css/weui.css"/>
-  <link rel="stylesheet" href="css/weui2.css"/>
-  <link rel="stylesheet" href="css/qky_grow.css"/>
-  <link rel="stylesheet" type="text/css" href="icon_font/iconfont.css"/>
-  <script src="js/zepto.min.js"></script>
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+<link rel="icon" href="../qky.ico">
+<link rel="stylesheet" href="css/weui.css"/>
+<link rel="stylesheet" href="css/weui2.css"/>
+<link rel="stylesheet" href="css/qky_grow.css"/>
+<link rel="stylesheet" type="text/css" href="icon_font/iconfont.css"/>
+<script src="js/zepto.min.js"></script>
 </head>
 
 <body ontouchstart class="pad_t5">
