--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>学生综合素质评价</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+<link rel="icon" href="../qky.ico">
 <link rel="stylesheet" href="../css/weui.css"/>
 <link rel="stylesheet" href="../css/weui2.css"/>
 <link rel="stylesheet" href="../css/nav_left.css"/>
