--- a/student_html/stu_health-rpt.html
+++ b/student_html/stu_health-rpt.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <title>学生综合素质评价</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-<link rel="stylesheet" href="../css/weui.css"/>
+<link rel="icon" href="../qky.ico">
+<link rel="stylesheet" href="css/weui.css"/>
 <link rel="stylesheet" href="../css/weui2.css"/>
 <link rel="stylesheet" href="../css/qky_grow.css"/>
 <link rel="stylesheet" type="text/css" href="../icon_font/iconfont.css"/>
