公告消息入口、列表、详情页

--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -43,7 +43,7 @@ document.addEventListener("DOMContentLoaded", function(){
       <div class="weui_btn_primary weui-header"> 
           <div class="weui-header-left"> <a class="icon icon-list f20 btn-slide-bar"></a>  </div>
           <h1 class="weui-header-title">功能首页</h1>
-           
+          <div class="weui-header-right"><a href="annc-list.html" class="icon icon-xiaoxi f20"><span class="weui-reddot"></span></a>  </div>
       </div>
        <div class="weui_panel weui_panel_access mar_t12">
             <div class="weui_panel_bd">
