--- a/teacher_html/teacher_evaluate.html
+++ b/teacher_html/teacher_evaluate.html
@@ -148,7 +148,7 @@ $('.weui-number-plus').click(function(){
           </div>
           <!--一级指标下拉-->
           <div id="menu_2" style="display:none;">
-             <div class="weui_cells weui_cells_radio mar_0 zb_checks zindex2 bg-gray01">
+             <div class="weui_cells weui_cells_radio mar_0 zb_checks zindex2 bg-gray01 abs">
               <label class="weui_cell weui_check_label" for="weui-select-id-日常评价">
                   <div class="weui_cell_bd weui_cell_primary">
                       <p>日常评价</p>
