--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -45,7 +45,7 @@
        <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-xueshengxieshi fz_40 f-blue"></i></div><p class="fz_12 f-black">学生写实</p></a>
      </div>
   </div>    
-  <div class="weui_cells_title bg-white mar_b0 pad_tb5">更多应用</div>
+  <div class="weui_cells_title bg-white mar_t12 mar_b0 pad_tb5">更多应用</div>
   <div class="weui_cells pad_tb5 pad_lr10">
      <div class="clear">
        <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-banjipingjia fz_40 f-blue"></i></div><p class="fz_12 f-black">班级评价</p></a>
