--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -35,14 +35,14 @@
   </div>
   <div class="weui_cells mar_t12 pad_tb5 pad_lr10">
      <div class="clear">
-       <a href="teacher_evaluate.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-zonghepingjia fz_40 f-green"></i></div><p class="fz_12 f-black">日常评价</p></a>
-       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-xueyechengji fz_40 f-blue"></i></div><p class="fz_12 f-black">学业成绩</p></a>
-       <a href="teacher_health-list.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-jiankang fz_40 f-red"></i></div><p class="fz_12 f-black">体质健康</p></a>
-       <a href="teacher_honor-list.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-rongyu fz_40 f-orange"></i></div><p class="fz_12 f-black">学生荣誉</p></a>
-       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-huodong fz_40 f-blue_b"></i></div><p class="fz_12 f-black">实践活动</p></a>
-       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-xueshengkaoqin fz_40 f-orange"></i></div><p class="fz_12 f-black">学生考勤</p></a>
-       <a href="teacher_reports.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-baogao1 fz_40 f-green"></i></div><p class="fz_12 f-black">学期报告书</p></a>
-       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-xueshengxieshi fz_40 f-blue"></i></div><p class="fz_12 f-black">学生写实</p></a>
+       <a href="teacher_evaluate.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-green"><i class="iconfont icon-zonghepingjia fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">日常评价</p></a>
+       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-dblue"><i class="iconfont icon-xueyechengji fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学业成绩</p></a>
+       <a href="teacher_health-list.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-red"><i class="iconfont icon-jiankang fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">体质健康</p></a>
+       <a href="teacher_honor-list.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-orange"><i class="iconfont icon-rongyu fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学生荣誉</p></a>
+       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-blue"><i class="iconfont icon-huodong fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">实践活动</p></a>
+       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-orange"><i class="iconfont icon-xueshengkaoqin fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学生考勤</p></a>
+       <a href="teacher_reports.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-green"><i class="iconfont icon-baogao1 fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学期报告书</p></a>
+       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-dblue"><i class="iconfont icon-xueshengxieshi fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学生写实</p></a>
      </div>
   </div>    
   <div class="weui_cells_title bg-white mar_t12 mar_b0 pad_tb5">更多应用</div>
