--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -60,6 +60,9 @@
              <i class="iconfont icon-zonghepingjia fz_40 f-green"></i></div><p class="fz_12 f-black">日常评价</p>
        </a>
        <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-dangan fz_40 f-blue_b"></i></div><p class="fz_12 f-black">成长档案袋</p></a>
+       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-2ndclass fz_40 f-green"></i></div><p class="fz_12 f-black">第二课堂</p></a>
+       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-zaixianxuanke fz_40 f-orange"></i></div><p class="fz_12 f-black">在线选课</p></a>
+       <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-kebiao fz_40 f-blue"></i></div><p class="fz_12 f-black">课表</p></a>
        <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><i class="iconfont icon-gengduoyingyong fz_40 f-gray"></i></div><p class="fz_12 f-black">开发中</p></a>
      </div>
   </div>    
