--- a/student_html/stu_function.html
+++ b/student_html/stu_function.html
@@ -37,7 +37,7 @@
      <div class="clear">
        <a href="stu_evaluate.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-green"><i class="iconfont icon-zonghepingjia fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">日常评价</p></a>
        <a href="stu_score.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-dblue"><i class="iconfont icon-xueyechengji fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学业成绩</p></a>
-       <a href="stu_health-list.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-red"><i class="iconfont icon-jiankang fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">体质健康</p></a>
+       <a href="stu_health-rpt.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-red"><i class="iconfont icon-jiankang fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">体质健康</p></a>
        <a href="stu_honor-list.html" class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-orange"><i class="iconfont icon-rongyu fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学生荣誉</p></a>
        <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-blue"><i class="iconfont icon-huodong fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">实践活动</p></a>
        <a class="col-25 fl mar_tb10 t-center"><div class="div-icon"><div class="icon-bg circle bg-orange"><i class="iconfont icon-xueshengkaoqin fz_26 f-white middle"></i></div></div><p class="fz_12 f-black">学生考勤</p></a>
