二级指标字符样式

--- a/student_html/stu_score.html
+++ b/student_html/stu_score.html
@@ -32,6 +32,18 @@
     </div>
     <a href="stu_score-card.html" class="weui_panel_ft f-blue">查看成绩单</a>
 </div>
+<div class="weui_panel weui_panel_access mar_t12">
+    <div class="weui_panel_hd fz_16 f-black">2016-2017学年上学期期末测试</div>
+    <div class="weui_panel_bd">
+        <div class="weui_media_box weui_media_text pad_tb5">
+            <p class="weui_media_desc mar_tb5 f-666"><i class="icon icon-jilu mar_r5"></i>期末考试</p>
+            <p class="weui_media_desc mar_tb5 f-666"><i class="icon icon-rilixuanze mar_r5"></i>2018年3月15日</p>
+            <p class="weui_media_desc mar_tb5 f-666"><i class="icon icon-icon mar_r5"></i>高二(1)班</p>
+        </div>
+        
+    </div>
+    <a href="stu_score-card.html" class="weui_panel_ft f-blue">查看成绩单</a>
+</div>
 
 
 </body>
